# pdg2025-fcen-uba-TP-4

./: .gitignore
src/core/: CMakeLists.txt  Optimization.cpp
src/gui/: GuiMainWindow.cpp
src/io/: LoaderObj.cpp  LoaderOff.cpp  LoaderPly.cpp  LoaderStl.cpp  LoaderStl.hpp  LoaderWrl.cpp  SaverStl.hpp
src/test/: dgpTest4.cpp
